<resources>
    <string name="app_name">Termsetter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_offered_classes_categories">Class Categories</string>
    <string name="title_activity_offered_classes_view">Offered Classes</string>
    <string name="title_activity_offered_classes_detail">Class Details</string>

    <string name="txtbtn_back">Back to Menu</string>

    <string name="header_main">Home</string>
    <string name="btn_main_manage_account">Manage Account</string>
    <string name="btn_main_view_my_schedule">View My Schedule</string>
    <string name="btn_main_view_my_courses">View My Classes</string>
    <string name="btn_main_view_off_courses">Browse Course List</string>
    <string name="btn_main_unenroll">Drop A Class</string>
    <string name="btn_main_logout">Logout</string>

    <string name="header_account_management">Account Management</string>
    <string name="btn_account_management_manage_profile">Manage Profile</string>
    <string name="btn_account_management_update_email">Update Email</string>
    <string name="btn_account_management_change_password">Change Password</string>
    <string name="btn_account_management_settings">Settings</string>

    <string name="header_manage_profile">View My Profile</string>
    <string name="txt_manage_profile_prompt1">Student Number:</string>
    <string name="txt_manage_profile_prompt2">Name:</string>
    <string name="txt_manage_profile_prompt3">ID:</string>
    <string name="txt_manage_profile_prompt4">Email:</string>
    <string name="txt_manage_profile_prompt5">Phone:</string>
    <string name="txt_manage_profile_student_number">[ ####### ]</string>
    <string name="txt_manage_profile_student_name">[ John Doe ]</string>
    <string name="txt_manage_profile_student_id">[ Student ID ]</string>
    <string name="txt_manage_profile_student_email">[ Email Address ]</string>
    <string name="txt_manage_profile_student_phone">[ Phone Number ]</string>

    <string name="header_update_email">Update Email</string>
    <string name="txt_update_email_prompt1">Current email:</string>
    <string name="txt_update_email_prompt2">New email:</string>
    <string name="txt_update_email_prompt3">Confirm new email:</string>
    <string name="txt_update_email_current_email">[ current.email@myumanitoba.ca ]</string>
    <string name="txt_update_email_hint1">e.g. new.email@myumanitoba.ca</string>
    <string name="txt_update_email_hint2">e.g. new.email@myumanitoba.ca</string>
    <string name="btn_update_email_confirm">Confirm email</string>

    <string name="header_change_password">Change Password</string>
    <string name="txt_change_password_prompt1">Current password:</string>
    <string name="txt_change_password_prompt2">New password:</string>
    <string name="txt_change_password_prompt3">Confirm new password:</string>
    <string name="btn_change_password_confirm">Confirm change</string>

    <string name="header_settings">Settings</string>

    <string name="title_activity_login_page">Login Page</string>
    <string name="title_activity_create_account">Create Account</string>

    <string name="spinner_title">Select Day</string>
    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>


    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="categories">Categories</string>
    <string name="title_activity_timetable">Timetable</string>

</resources>