<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.AccountChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/header_change_password"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="64dp"
            android:text="@string/txt_change_password_prompt1"/>

        <EditText
            android:id="@+id/editTextCurrentPassword"
            android:layout_width="@dimen/Termsetter.EditText.Width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/changePasswordTxt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txt_change_password_prompt2"/>

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="@dimen/Termsetter.EditText.Width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txt_change_password_prompt3"/>

        <EditText
            android:id="@+id/editTexConfirmPassword"
            android:layout_width="@dimen/Termsetter.EditText.Width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/buttonConfirmPassword"
            android:layout_width="@dimen/Termsetter.ConfirmButton.Width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:onClick="onClickConfirmButton"
            android:text="@string/btn_change_password_confirm"/>
    </LinearLayout>
</ScrollView>